// protoc --gofast_out=. block.proto

syntax = "proto3";

package ngtype;

import "operation.proto";

message Block {
    uint64 height = 1;

    int64 timestamp = 2;
    bytes trie_hash = 3;
    bytes prev_block_hash = 4;
    bytes prev_vault_hash = 5;

    bytes beneficiary = 6;

    bytes difficulty = 7;

    bytes nonce = 8;
    repeated ngtype.Operation operations = 9;

    bytes hash = 10;
}
